Application basic fetures working now